Fix the scrollbar

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,3 +9,20 @@ body {
     background-position: center;
     background-attachment: fixed;
 }
+
+::-webkit-scrollbar {
+    width: 8px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: #555;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #121212;
+    border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #242424;
+}
